[package]
name = "norg_astro"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
norg_to_html = { git = "https://github.com/cramt/norg_to_html", branch = "main" }
serde = "1"
serde_json = "1"
